<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.carlos</groupId>
    <artifactId>carlos-framework</artifactId>
    <version>3.0.0-SNAPSHOT</version>

    <packaging>pom</packaging>

    <properties>
        <revision>3.0.0-SNAPSHOT</revision>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
        <!-- 1. 依赖管理（必须第一个） -->
        <module>carlos-dependencies</module>

        <!-- 2. 父POM（必须第二个） -->
        <module>carlos-parent</module>

        <!-- 3. 通用基础库 -->
        <module>carlos-commons</module>

        <!-- 4. Spring Boot 集成 -->
        <module>carlos-spring-boot</module>

        <!-- 5. 第三方集成 -->
        <module>carlos-integration</module>

        <!-- 6. 示例和测试 -->
        <module>carlos-samples</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.carlos</groupId>
                <artifactId>carlos-dependencies</artifactId>
                <version>${revision}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>


    <profiles>
        <profile>
            <id>carlos-public</id>
            <distributionManagement>
                <repository>
                    <id>carlos-releases</id>
                    <name>Nexus Release Repository</name>
                    <url>http://zcarlos.com:8081/nexus/repository/maven-releases/</url>
                </repository>
                <snapshotRepository>
                    <id>carlos-snapshots</id>
                    <name>Nexus Snapshot Repository</name>
                    <url>http://zcarlos.com:8081/nexus/repository/maven-snapshots/</url>
                </snapshotRepository>
            </distributionManagement>

            <repositories>
                <repository>
                    <id>nexus</id>
                    <url>http://zcarlos.com:8081/nexus/repository/maven-public/</url>
                    <releases>
                        <enabled>true</enabled>
                        <updatePolicy>always</updatePolicy>
                    </releases>
                    <snapshots>
                        <enabled>true</enabled>
                        <updatePolicy>always</updatePolicy>
                    </snapshots>
                </repository>
            </repositories>
            <pluginRepositories>
                <pluginRepository>
                    <id>nexus</id>
                    <url>http://zcarlos.com:8081/nexus/repository/maven-public/</url>
                    <releases>
                        <enabled>true</enabled>
                        <updatePolicy>always</updatePolicy>
                    </releases>
                    <snapshots>
                        <enabled>true</enabled>
                        <updatePolicy>always</updatePolicy>
                    </snapshots>
                </pluginRepository>
            </pluginRepositories>
        </profile>
        <profile>
            <id>carlos-private</id>
            <distributionManagement>
                <repository>
                    <id>carlos-releases</id>
                    <name>Nexus Release Repository</name>
                    <url>http://192.168.3.30:8081/nexus/repository/maven-releases/</url>
                </repository>
                <snapshotRepository>
                    <id>carlos-snapshots</id>
                    <name>Nexus Snapshot Repository</name>
                    <url>http://192.168.3.30:8081/nexus/repository/maven-snapshots/</url>
                </snapshotRepository>
            </distributionManagement>

            <repositories>
                <repository>
                    <id>nexus</id>
                    <url>http://192.168.3.30:8081/nexus/repository/maven-public/</url>
                    <releases>
                        <enabled>true</enabled>
                        <updatePolicy>always</updatePolicy>
                    </releases>
                    <snapshots>
                        <enabled>true</enabled>
                        <updatePolicy>always</updatePolicy>
                    </snapshots>
                </repository>
            </repositories>
            <pluginRepositories>
                <pluginRepository>
                    <id>nexus</id>
                    <url>http://192.168.3.30:8081/nexus/repository/maven-public/</url>
                    <releases>
                        <enabled>true</enabled>
                        <updatePolicy>always</updatePolicy>
                    </releases>
                    <snapshots>
                        <enabled>true</enabled>
                        <updatePolicy>always</updatePolicy>
                    </snapshots>
                </pluginRepository>
            </pluginRepositories>
        </profile>

    </profiles>
</project>
